--- a/mern-egg/src/index.css
+++ b/mern-egg/src/index.css
@@ -5,6 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-color: rgb(17, 9, 158);
+
 }
 
 code {
