modified signup page etc

--- a/mern-egg/src/CreateUser.css
+++ b/mern-egg/src/CreateUser.css
@@ -14,3 +14,27 @@
     font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
     font-weight: bold;
 }
+
+input[type=text] {
+    width: 70%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    background-color: rgb(223, 223, 223);
+}
+
+input[type=password] {
+    width: 70%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    background-color: rgb(223, 223, 223);
+}
+
+input[type=number] {
+    width: 70%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    background-color: rgb(223, 223, 223);
+}
