--- a/mern-egg/src/Home.css
+++ b/mern-egg/src/Home.css
@@ -1,20 +1,52 @@
 body {
-    background: linear-gradient(180deg, rgb(179, 16, 130), rgb(162, 172, 20));
+    background-color: white;
     background-attachment: fixed;
+    padding-top: 60px;
+}
+
+div.profile {
+    background-color: white;
+    margin-bottom: 15px;
+}
+
+.avatar {
+    border-radius: 50%;
+    float: left;
+    margin-bottom: 20px;
 }
 
 .background {
-    margin-top: 0px;
     background-color: white;
-    margin-bottom: 300px;
+}
+
+h3 {
+    margin-left: 17px;
+    margin-bottom: 10px;
+}
+
+p {
+    position: relative; 
+	left: 20px;
+}
+
+.edit {
+    position: relative;
+    left: 37px;
 }
 
 h2 {
-    color:rgb(175, 141, 29);
-    font-size: 60px;
+    font-size: 40px;
     font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
     font-weight: bold;
+    margin-top: 10px;
 }
-table {
-    background-color: white;   
+.table {
+    margin-top: 20px;   
 }
+
+.thead-custom {
+    background-color: rgb(15, 15, 80);
+    color: white;
+}
+
+
