--- a/mern-egg/src/Login.css
+++ b/mern-egg/src/Login.css
@@ -1,7 +1,20 @@
+.bg {
+    background: linear-gradient(180deg, rgb(15, 15, 80), rgb(85, 87, 196));
+    padding:0;
+    margin:0;
+
+    top:0;
+    left:0;
+
+    width: 100vw;
+
+    position: fixed;
+}
+
 .submitForm {
     text-align: center;
-    margin-top: 150px;
-    margin-bottom: 100px;
+    margin-top: 100px;
+    margin-bottom: 150px;
     margin-left: 390px;
     margin-right: 390px;
     background-color: white;
@@ -9,7 +22,7 @@
 }
 
 .title {
-    color:rgb(175, 141, 29);
+    color: rgb(15, 15, 80);
     font-size: 60px;
     font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
     font-weight: bold;
@@ -48,7 +61,3 @@ input[type=submit] {
     font-weight: bold;
 }
 
-body {
-    background: linear-gradient(180deg, rgb(10, 10, 109), rgb(85, 87, 196));
-    background-attachment: fixed;
-}
