--- a/mern-egg/src/Login.css
+++ b/mern-egg/src/Login.css
@@ -1,20 +1,7 @@
-.bg {
-    background: linear-gradient(180deg, rgb(15, 15, 80), rgb(85, 87, 196));
-    padding:0;
-    margin:0;
-
-    top:0;
-    left:0;
-
-    width: 100vw;
-
-    position: fixed;
-}
-
 .submitForm {
     text-align: center;
-    margin-top: 100px;
-    margin-bottom: 150px;
+    margin-top: 150px;
+    margin-bottom: 100px;
     margin-left: 390px;
     margin-right: 390px;
     background-color: white;
@@ -22,7 +9,7 @@
 }
 
 .title {
-    color: rgb(15, 15, 80);
+    color:rgb(175, 141, 29);
     font-size: 60px;
     font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
     font-weight: bold;
@@ -61,3 +48,7 @@ input[type=submit] {
     font-weight: bold;
 }
 
+body {
+    background: linear-gradient(180deg, rgb(10, 10, 109), rgb(85, 87, 196));
+    background-attachment: fixed;
+}
