add button to events, but it goes to home instead

--- a/mern-egg/src/Events.css
+++ b/mern-egg/src/Events.css
@@ -8,3 +8,14 @@ button.RemoveButton {
     cursor: pointer;
     font-weight: bold;
 }
+
+.AddEvent {
+    background-color: #231380;
+    border: none;
+    color: white;
+    padding: 12px 25px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+    font-weight: bold;
+}
