--- a/mern-egg/src/EditUser.css
+++ b/mern-egg/src/EditUser.css
@@ -1,11 +1,6 @@
-.img_beard {
-    background:url(./profilepictures/beard_pic.png) no-repeat;
-    cursor:pointer;
-    border:none;
-    width:30px;
-    height:30px;
-}
-
-.img_beard:active {
-    background:url(./profilepictures/beard_pic.png) no-repeat;
+input[type=image] {
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
